syntax = "proto3";

package example.v1;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

// User service for managing users
service UserService {
    // Get a user by ID
    rpc GetUser(GetUserRequest) returns (GetUserResponse) {
        option (google.api.http) = {
            get: "/v1/users/{user_id}"
        };
    }
    
    // Create a new user
    rpc CreateUser(CreateUserRequest) returns (User) {
        option (google.api.http) = {
            post: "/v1/users"
            body: "*"
        };
    }
    
    // Update an existing user
    rpc UpdateUser(UpdateUserRequest) returns (User) {
        option (google.api.http) = {
            put: "/v1/users/{user.id}"
            body: "user"
        };
    }
    
    // Delete a user
    rpc DeleteUser(DeleteUserRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            delete: "/v1/users/{id}"
        };
    }
    
    // List users with pagination
    rpc ListUsers(ListUsersRequest) returns (ListUsersResponse) {
        option (google.api.http) = {
            get: "/v1/users"
        };
    }
}

// Request message for GetUser
message GetUserRequest {
    string user_id = 1;
}

// Request message for CreateUser
message CreateUserRequest {
    User user = 1;
}

// Request message for UpdateUser
message UpdateUserRequest {
    User user = 1;
}

// Request message for DeleteUser
message DeleteUserRequest {
    string id = 1;
}

// Request message for ListUsers
message ListUsersRequest {
    int32 page_size = 1;
    string page_token = 2;
    string filter = 3;
}

// Response message for GetUser
message GetUserResponse {
    User user = 1;
}

// Response message for ListUsers
message ListUsersResponse {
    repeated User users = 1;
    string next_page_token = 2;
    int32 total_count = 3;
}

// User entity
message User {
    string id = 1;
    string name = 2;
    string email = 3;
    Status status = 4;
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp updated_at = 6;
    
    // Nested profile information
    message Profile {
        string bio = 1;
        string avatar_url = 2;
        repeated string interests = 3;
    }
    
    Profile profile = 7;
    repeated string roles = 8;
}

// User status enumeration
enum Status {
    STATUS_UNSPECIFIED = 0;
    STATUS_ACTIVE = 1;
    STATUS_INACTIVE = 2;
    STATUS_SUSPENDED = 3;
}